deploy abslig changes

--- a/force-app/main/default/classes/ABSLIG_BulkCloseCaseConverterUtility.cls
+++ b/force-app/main/default/classes/ABSLIG_BulkCloseCaseConverterUtility.cls
@@ -1,127 +1,100 @@
-@SuppressWarnings('PMD.ApexSOQLInjection')
-
-public with sharing class ABFL_BulkCreateCaseConverterUtility implements ASF_BulkCSVToRecordConverter{
+public with sharing class ABSLIG_BulkCloseCaseConverterUtility implements ASF_BulkCSVToRecordConverter{
     public ASF_BulkCaseProcessorUtility.ConvertionResult convertJSONRows(Map<Id, String> jsonRows){
         //Each row will be
-        //{'Loan Account No':'LAN1234','Issue Type Code':'ABFL1234', 'Source':'Email', 'Description':'DescriptionXYZ', 'Block Customer Communication':TRUE}
+        //{'Case number':'00005150', 'Stage':'Unresolved', 'Close Unresolved Reason':'Others', 'Close Unresolved Details':'Sample text'}
 
         ASF_BulkCaseProcessorUtility.ConvertionResult resultWrapper = new ASF_BulkCaseProcessorUtility.ConvertionResult();
         resultWrapper.resultJSONMapRows = new Map<Id, Map<String, String>>();
         resultWrapper.resultJSONRows = new Map<Id, String>();
         resultWrapper.resultRecords = new Map<Id, SObject>();
 
-        Set<String> lans = new Set<String>();
-        Set<String> cccExtIds = new Set<String>();
+        Set<String> caseNumbers = new Set<String>();
         Map<Id, Map<String, String>> rows = new Map<Id, Map<String, String>>();
         for(Id lineItemId : jsonRows.keySet()){
             String eachJSON = jsonRows.get(lineItemId);
             System.debug('eachJSON'+eachJSON);
             Map<String, String> keyValueMap = (Map<String, String>)JSON.deserialize(eachJSON, Map<String, String>.class);
-            if(String.isNotBlank(keyValueMap.get('Loan Account No'))){
-                lans.add(keyValueMap.get('Loan Account No').trim());
-            }
-            if(String.isNotBlank(keyValueMap.get('Issue Type Code'))){
-                cccExtIds.add(keyValueMap.get('Issue Type Code').trim());
+            if(String.isNotBlank(keyValueMap.get('Case number'))){
+                caseNumbers.add(keyValueMap.get('Case number').trim());
             }
             rows.put(lineItemId, keyValueMap);
         }
 
-        Map<String, Id> lanToAccountIdMap = new Map<String,Id>();
-        Map<String, Id> lanToAssetIdMap = new Map<String,Id>();
-        for(Asset assetRec : [Select Id, LAN__c, AccountId from Asset where LAN__c IN :lans and Business_Unit__c = 'ABFL']){
-            lanToAccountIdMap.put(assetRec.LAN__c, assetRec.AccountId);
-            lanToAssetIdMap.put(assetRec.LAN__c, assetRec.Id);
-        }
-
-        Set<String> extIdFoundSet = new Set<String>();
-        for(ASF_Case_Category_Config__c config : [SELECT Id, CCC_External_Id__c FROM ASF_Case_Category_Config__c WHERE CCC_External_Id__c IN :cccExtIds]){
-            extIdFoundSet.add(config.CCC_External_Id__c);
+        Map<String, Case> caseNumberToCaseMap = new Map<String,Case>();
+        for(Case caseRec : [Select Id, CaseNumber, IsClosed, Stage__c, RecordTypeId, CCC_External_Id__c, AccountId from Case where CaseNumber IN :caseNumbers]){
+            caseNumberToCaseMap.put(caseRec.CaseNumber, caseRec);
         }
 
         for(Id lineItemId : rows.keySet()){
             Map<String, String> keyValueMap = rows.get(lineItemId);
-            Boolean blockCommunicationFlag = false;
-
-            String issueTypeCode = keyValueMap.get('Issue Type Code').trim();
-            String lan = keyValueMap.get('Loan Account No').trim();
-            String blockCommString = String.isNotBlank(keyValueMap.get('Block Customer Communication'))?keyValueMap.get('Block Customer Communication').trim():keyValueMap.get('Block Customer Communication');
-            String source = String.isNotBlank(keyValueMap.get('Source'))?keyValueMap.get('Source').trim():keyValueMap.get('Source');
-            String description = String.isNotBlank(keyValueMap.get('Description'))?keyValueMap.get('Description').trim():keyValueMap.get('Description');
-            if(issueTypeCode == null || issueTypeCode.trim() == ''){
+            String caseNumber = String.isNotBlank(keyValueMap.get('Case number'))?keyValueMap.get('Case number').trim():keyValueMap.get('Case number');
+            String unresolvedDetails = String.isNotBlank(keyValueMap.get('Close Unresolved Details'))?keyValueMap.get('Close Unresolved Details').trim():keyValueMap.get('Close Unresolved Details');
+            String unresolvedReason = String.isNotBlank(keyValueMap.get('Close Unresolved Reason'))?keyValueMap.get('Close Unresolved Reason').trim():keyValueMap.get('Close Unresolved Reason');
+            String stage = String.isNotBlank(keyValueMap.get('Stage'))?keyValueMap.get('Stage').trim():keyValueMap.get('Stage');
+            if(caseNumber == null || caseNumber.trim() == ''){
                 keyValueMap.put('Result', 'FAILURE');
-                keyValueMap.put('Message', 'Issue Type Code is required');
+                keyValueMap.put('Message', 'Case number is required');
                 resultWrapper.resultJSONRows.put(lineItemId, JSON.serialize(keyValueMap));
                 resultWrapper.resultJSONMapRows.put(lineItemId, keyValueMap);
                 continue;
             }
-            if(lan == null || lan.trim() == ''){
+            if(stage == null || stage.trim() == ''){
                 keyValueMap.put('Result', 'FAILURE');
-                keyValueMap.put('Message', 'Loan Account No is required');
+                keyValueMap.put('Message', 'Stage is required');
                 resultWrapper.resultJSONRows.put(lineItemId, JSON.serialize(keyValueMap));
                 resultWrapper.resultJSONMapRows.put(lineItemId, keyValueMap);
                 continue;
             }
-            if(source == null || source.trim() == ''){
+            if(stage.toLowerCase() == 'unresolved' && (unresolvedReason == null || unresolvedReason.trim() == '')){
                 keyValueMap.put('Result', 'FAILURE');
-                keyValueMap.put('Message', 'Source is required');
+                keyValueMap.put('Message', 'Close Unresolved Reason is required');
                 resultWrapper.resultJSONRows.put(lineItemId, JSON.serialize(keyValueMap));
                 resultWrapper.resultJSONMapRows.put(lineItemId, keyValueMap);
                 continue;
             }
-            if(description == null || description.trim() == ''){
+            if(!caseNumberToCaseMap.containsKey(caseNumber)){
                 keyValueMap.put('Result', 'FAILURE');
-                keyValueMap.put('Message', 'Description is required');
+                keyValueMap.put('Message', 'Invalid Case Number');
                 resultWrapper.resultJSONRows.put(lineItemId, JSON.serialize(keyValueMap));
                 resultWrapper.resultJSONMapRows.put(lineItemId, keyValueMap);
                 continue;
             }
-            if(!extIdFoundSet.contains(issueTypeCode)){
+            if(caseNumberToCaseMap.get(caseNumber).IsClosed == true){
                 keyValueMap.put('Result', 'FAILURE');
-                keyValueMap.put('Message', 'Issue Type Code is not valid');
+                keyValueMap.put('Message', 'Case is already '+caseNumberToCaseMap.get(caseNumber).Stage__c);
                 resultWrapper.resultJSONRows.put(lineItemId, JSON.serialize(keyValueMap));
                 resultWrapper.resultJSONMapRows.put(lineItemId, keyValueMap);
                 continue;
             }
-            if(!lanToAccountIdMap.containsKey(lan)){
+            if(caseNumberToCaseMap.get(caseNumber).RecordTypeId == ASF_Constants.RT_INTERACTION 
+            && (caseNumberToCaseMap.get(caseNumber).AccountId == null || caseNumberToCaseMap.get(caseNumber).CCC_External_Id__c == null)){
                 keyValueMap.put('Result', 'FAILURE');
-                keyValueMap.put('Message', 'Loan Account Number is not found');
+                keyValueMap.put('Message', 'Case does not have Account tagged or Issue Type Code tagged');
                 resultWrapper.resultJSONRows.put(lineItemId, JSON.serialize(keyValueMap));
                 resultWrapper.resultJSONMapRows.put(lineItemId, keyValueMap);
                 continue;
             }
-            if(String.isNotBlank(blockCommString)){
-                if(!blockCommString.equalsIgnoreCase('TRUE') && !blockCommString.equalsIgnoreCase('FALSE')){
-                    keyValueMap.put('Result', 'FAILURE');
-                    keyValueMap.put('Message', 'Invalid Block Customer Communication value provided - Accepted value - TRUE/FALSE');
-                    resultWrapper.resultJSONRows.put(lineItemId, JSON.serialize(keyValueMap));
-                    resultWrapper.resultJSONMapRows.put(lineItemId, keyValueMap);
-                    continue;
-                }
-                try{
-                    blockCommunicationFlag = Boolean.valueOf(blockCommString);
-                }catch(Exception e){
-                    keyValueMap.put('Result', 'FAILURE');
-                    keyValueMap.put('Message', 'Invalid Block Customer Communication value provided - Accepted value - TRUE/FALSE');
-                    resultWrapper.resultJSONRows.put(lineItemId, JSON.serialize(keyValueMap));
-                    resultWrapper.resultJSONMapRows.put(lineItemId, keyValueMap);
-                    continue;
-                }
-            }else{
+            Case caseRec = caseNumberToCaseMap.get(caseNumber);
+            if(stage == 'Resolved'){
+                caseRec.Stage__c = stage;
+                caseRec.Status = stage;
+                caseRec.Pending_Clarification__c = false;
+                caseRec.moved_back__c = false;
+                caseRec.Is_Manual_Moved__c = true;
+            }else if(stage == 'Unresolved'){
+                caseRec.Stage__c = stage;
+                caseRec.Status = stage;
+                caseRec.Reject_Case__c = true;
+                caseRec.Rejected_Reason__c = unresolvedDetails;
+                caseRec.Rejection_Reason__c = unresolvedReason;
+            }else{ 
                 keyValueMap.put('Result', 'FAILURE');
-                keyValueMap.put('Message', 'Invalid Block Customer Communication value provided - Accepted value - TRUE/FALSE');
+                keyValueMap.put('Message', 'Invalid Stage');
                 resultWrapper.resultJSONRows.put(lineItemId, JSON.serialize(keyValueMap));
                 resultWrapper.resultJSONMapRows.put(lineItemId, keyValueMap);
                 continue;
             }
-            Case caseRec = new Case();
-            caseRec.AccountId = lanToAccountIdMap.get(lan);
-            caseRec.AssetId = lanToAssetIdMap.get(lan);
-            caseRec.CCC_External_Id__c = issueTypeCode;
-            caseRec.Source__c = source;
-            caseRec.Description = description;
-            caseRec.No_Auto_Communication__c = blockCommunicationFlag?'Email;SMS':null;
-            caseRec.RecordTypeId = ASF_Constants.RT_FRAMEWORK;
-            caseRec.Technical_Source__c = 'LWC';
+            //Any other BU specific checks - add here
             resultWrapper.resultRecords.put(lineItemId, caseRec);
             resultWrapper.resultJSONMapRows.put(lineItemId, keyValueMap);
         }
@@ -132,18 +105,16 @@ public with sharing class ABFL_BulkCreateCaseConverterUtility implements ASF_Bul
     public List<Map<String,String>> prepareDownloadTemplate(List<String> columnNames, String objectName, Id listViewId, List<String> selectedRecordIds){
         List<Map<String, String>> listOfRecordsAsMap = new List<Map<String, String>>();
         Map<String, String> mapOfFieldApiToColumnName = new Map<String,String>{
-            'LAN__c'=>'Loan Account No',
-            'CCC_External_Id__c'=>'Issue Type Code',
-            'Source__c'=>'Source',
-            'Description'=>'Description',
-            'No_Auto_Communication__c'=>'Block Customer Communication'
+            'CaseNumber'=>'Case number',
+            'Stage__c'=>'Stage',
+            'Rejection_Reason__c'=>'Close Unresolved Reason',
+            'Rejected_Reason__c'=>'Close Unresolved Details'
         };
         Map<String, String> mapOfColumnNameToFieldApi = new Map<String,String>{
-            'Loan Account No'=>'LAN__c',
-            'Issue Type Code'=>'CCC_External_Id__c',
-            'Source'=>'Source__c',
-            'Description'=>'Description',
-            'Block Customer Communication'=>'No_Auto_Communication__c'
+            'Case number'=>'CaseNumber',
+            'Stage'=>'Stage__c',
+            'Close Unresolved Reason'=>'Rejection_Reason__c',
+            'Close Unresolved Details'=>'Rejected_Reason__c'
         };
         List<String> fieldNames = new List<String>();
         for(String columnName : columnNames){
@@ -151,7 +122,7 @@ public with sharing class ABFL_BulkCreateCaseConverterUtility implements ASF_Bul
                 fieldNames.add(mapOfColumnNameToFieldApi.get(columnName));
             }
         }
-
+        System.debug('fieldNames'+fieldNames);
         String strFinalQuery;
         if(selectedRecordIds != null && !selectedRecordIds.isEmpty()){
             String strFields = String.join(fieldNames, ',');
