--- a/force-app/main/default/classes/ASF_CaseQueryHandler.cls
+++ b/force-app/main/default/classes/ASF_CaseQueryHandler.cls
@@ -56,7 +56,7 @@ public without sharing class ASF_CaseQueryHandler {
                                         FROM ASF_Checklist__c
                                         WHERE
                                         Mandatory__c = TRUE
-                                        AND Status__c NOT IN ('Completed','Rejected')
+                                        AND Status__c NOT IN : ASF_Constants.completeChecklistStatus
                                         AND Case__c = :caseIds
                                         AND Stage_Name__c = :caseStages WITH SYSTEM_MODE];
         }
