updated verbiage for error message

--- a/force-app/main/default/classes/ABFL_OdpAltertsController.cls
+++ b/force-app/main/default/classes/ABFL_OdpAltertsController.cls
@@ -1,7 +1,7 @@
 /**
  * @description       : Class to handle Odp Alerts
  * @group             : ABFL
- * @last modified on  : 06-28-2024
+ * @last modified on  : 07-12-2024
  * @last modified by  : rsinghnagar@salesforce.com
  * 
  * Modifications Log
@@ -29,7 +29,7 @@ public with sharing class ABFL_OdpAltertsController {
             String payload = JSON.serialize(new PayloadWrapper(accObj.Client_Code__c));
             ABCL_IntegrationCallout.IntegrationResponseWrapper odpResponseWrp = ABCL_IntegrationCallout.executeCallout(integrationName,payload,null);
             if(odpResponseWrp.responseBody == '[]'){
-                odpAlertResponseList = ODPAlertResponse.parse('[{\"messageText\":\"There is no odp alert avalible\"}]');
+                odpAlertResponseList = ODPAlertResponse.parse('[{\"messageText\":\"There are no ODP alert available.\"}]');
             }else{
                 odpAlertResponseList = ODPAlertResponse.parse(odpResponseWrp.responseBody);
             }
