--- a/force-app/main/default/classes/LeadTriggerHandler.cls
+++ b/force-app/main/default/classes/LeadTriggerHandler.cls
@@ -4,13 +4,15 @@
 *Created Date :  27/02/2024
 *Description  :  Trigger Handler for Lead 
 *********************************************************/
+
+@SuppressWarnings('PMD.ApexDoc')
 public with sharing class LeadTriggerHandler extends ASF_VTriggerHandler {
-  public static Boolean TriggerDisabled = false;
-    public override void AfterInsert(map<Id, sObject> newItems) {
-      if(!TriggerDisabled){
-            LeadTriggerHelper.sendLeadToCRM((Map<Id,Lead>)newItems); 
-        } 
-    }
+  public static Boolean triggerDisabled = false;
+  public override void AfterInsert(map<Id, sObject> newItems) {
+    if(!triggerDisabled){
+          LeadTriggerHelper.sendLeadToCRM((Map<Id,Lead>)newItems); 
+    } 
+  }
 
   @SuppressWarnings('PMD.ApexDoc, PMD.MethodNamingConventions')
   /*********************************************************
